css/style.css
/* ... */
address {
    line-height: 21px;
    margin: 16px 0 18px;
}

address .blue {
    color: #00aeff;
}

address a {
    color: #666666;
}

.required {
    color: #c30c30;
}


/************** header ***************/

.site_header {
    background: #ffffff;
    padding: 35px 0 11px;
    overflow: hidden;
}

.skip-link, .site_header h1 {
    position: absolute;
    left: -9999px;
    top: -9999px;
}


.site_header a#title {
    display: block;
    height: 42px;
    width: 200px;
    margin-left: 47px;
    position: relative;
    z-index: 1;
}

.logo_letter {
    display: inline-block;
    position: relative;
    bottom: -2px;
}

.logo_letter img {
    margin: 0 5px;
    background: #ffffff;
}


#blog-description {
    color: #00aeef;
    display: inline-block;
    margin: 0;
    font-size: 10px;
    float: left;
    border-top: 2px solid #00aeff;
    width: 308px;
    padding: 13px 0 0 20px;
    position: absolute;
    top: 77px;
    z-index: 0;
    margin-bottom: -27px;
}

.site_header nav {
    float: right;
    font-size: 11px;
    border-top: 2px solid #00aeff;
}

.page_item {
    display: inline-block;
}

.topmenu_top {
    border-left: 2px solid #00aeef;
    height: 12px;
}


.topmenu_body {
    padding: 0 20px;
}

.topmenu_body a {
    text-decoration: none;
    color: #a9a9a9;
}


.big_box header {
    padding: 8px 0 6px;
}

/************ body *************/

.container {
    background: url(../images/container_background.png);
    padding: 20px 20px 35px 20px;
    overflow: hidden;
}


/******** HOME *********/

/******* logo counter ********/

#logox_counter {
    background: #ef8dd9;
    display: inline-block;
    position: relative;
    color: #ffffff;
    padding: 6px 7px 5px;
    text-align: center;
    width: 124px;
    font-size: 12px;
    float: left;
}


.point_left {
    border-bottom: 9px solid #ef8dd9;
    border-left: 10px solid /*rgba(0,0,0,0)*/ transparent;
    margin-right: -5px;
    display: inline-block;
    position: absolute;
    top: -9px;
    left: 94px;
    line-height: 0;
}

.point_right {
    border-bottom: 9px solid #ef8dd9;
    border-right: 10px solid /*rgba(0,0,0,0)*/ transparent;
    display: inline-block;
    position: absolute;
    top: -9px;
    left: 102px;
    line-height: 0;
}

#logox_counter h2 {
    font-size: 9px;
    line-height: 13px;
    width: 138px;
    margin-left: -7px;
    font-weight: normal;
}

#logox_counter_number {
    font: 24px Georgia, Serif;
    letter-spacing: 2px;
    padding-bottom: 8px;
    line-height: 25px;
    border-bottom: 1px dashed #ffffff;
}

#logox_counter a {
    display: block;
}

#read_the_logo_story {
    color: #ffffff;
    margin: 10px 0 9px;
    display: block;
    line-height: 14px;
}

#upload_a_letter {
    color:#ff0087;
    margin-top: 10px;
}

/************* our work container *************/

#bluebox_home_left {
    width: 239px;
    margin-left: 17px;
    float: left;
}

#bluebox_home_left h2 {
    font-size: 24px;
}

#bluebox_home_left hr {
    position: relative;
    width: 570px;
}

#bluebox_home_left p {
    width: 225px;
}


#bluebox_home_right {
    font: 9px arial, sans-serif;
    float: right;
    margin-left: -33px;
}

.bluebox_nav {
    margin-top: 7px;
}

.box_nav * {
    display: inline-block;
    color: #666666;

}

.bluebox_content {
    margin-top: 22px;
}


.bluebox_content img {
    margin-bottom: 8px;
}

.bluebox_content li {
    margin-bottom: 5px;
}


.bluebox_content li.bluebox_content_link  {
    margin-bottom: 0;
    text-transform: uppercase;
    text-align: right;
}

.our_work_bluebox_content {
    display: none;
}

.our_work_bluebox_content.current {
    display: block;
}

/*************** Latest Posts **************/

.whitebox_primary_post {
    display: none;
}

.whitebox_primary_post.current {
    display: block;
}

.whitebox_primary_post h3, .theraakonteur_whitebox_primary h3 {
    font-size: 19px;
    line-height: 30px;
    margin: 0 0 6px;
    padding-top: 5px;
}

.whitebox_primary_post h3 a {
    color: #666666;
}

.whitebox_primary_post_attr {
    font: 11px arial, sans-serif;
    margin: 6px 0 12px;
}

.whitebox_primary_post_attr * {
    display: inline-block;
}


.whitebox_primary_post_attr .seperator {
    margin:  0 5px;
}

.commenticon {
    vertical-align: middle;
    margin-right: 6px;
}

/*.whitebox_primary_post_content p {
    width: 159px;
    display: inline-block;
}*/

.whitebox_primary_post_content {
    overflow: auto;
}

.whitebox_primary_post_content_right {
    /*display: inline-block;*/
    text-align: right;
    vertical-align: top;
    margin: 13px 0 0 38px;
    font: 9px arial, sans-serif;
    text-transform: uppercase;
    float: right;
}


.whitebox_primary_post_content_right a {
    display: block;
}

.whitebox_primary .more_link {
    margin-top: 17px;
}

.whitebox_primary_post .solid {
margin: 25px 0 9px;
}

.whitebox_primary_footer {
    font-size: 9px;
    margin: 12px 0 10px;
}


.whitebox_primary_footer_right {
    float: right;
}


.whitebox_primary_footer_left {
    float: left;
}


.whitebox_primary_footer_right a .arrow {
    color: #00aeef;
    margin: 0 2px;
}


/************** Other Posts ***************/

.whitebox_secondary h3 {
    font-size: 11px;
}


.blog_category_bluebox_primary a, .whitebox_secondary a, .raakonteur_bluebox_primary a {
    color: #666666;
}


.blog_category_bluebox_primary li, .other_posts li, .blog_whitebox_secondary li, .raakonteur_bluebox_primary li {
    padding-left:16px;
}


.blog_category_bluebox_primary li, .blog_whitebox_secondary li, .other_posts_content_one li, .raakonteur_bluebox_primary li {
    background: url(../images/whitebox_secondary_body_content_one_list.png) no-repeat 0px 5px;
}

.other_posts_content_two li {
    background: url(../images/whitebox_secondary_body_content_two_list.png) no-repeat 0px 5px;
}

.other_posts_content_three li {
    background: url(../images/whitebox_secondary_body_content_three_list.png) no-repeat 0px 5px;
}
/* ... */

